--- a/styles_b-1.css
+++ b/styles_b-1.css
@@ -1,7 +1,12 @@
+* {
+    font-family: Roboto;
+    margin: 0;
+    padding: 0;
+}
 
-
-header,
-footer {
+#header,
+#footer {
+    width: 100%;
     display: flex;
 }
 
@@ -16,18 +21,152 @@ footer {
     width: 240px;
 }
 
-.dropdown {
+.nav {
     background-color: rgb(189, 186, 186);
-    height: 100px;
     width: 960px;
+    margin: 0;
+    padding: 0;
 }
 
-.slider {
+ul {
+    list-style: none;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* nav */
+.nav > ul {
+    display: flex;
+    justify-content: right;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .nav > ul > li {
+    position: relative;
+  }
+  .nav > ul > li > a {
+    display: inline-block;
+    padding: 10px 50px;
+    background-color: black;
+    color: white;
+  }
+  .nav > ul > li > a:hover {
+    background-color: #ff0000;
+  }
+  .nav > ul > li > ul {
+    position: absolute;
+    left: 0;
+    top: 38px;
+    background-color: #c1c1c1;
+    width: 100%;
+    text-align: center;
+    display: none;
+    z-index: 100;
+  }
+  .nav > ul > li > ul > li > a {
+    display: inline-block;
+    padding: 10px;
+    background-color: #c1c1c1;
+    width: 100%;
+    box-sizing: border-box;
+    color: black;
+    z-index: 100;
+  }
+  .nav > ul > li > ul > li > a:hover {
+    background-color: #8f8f8f;
+  }
+  
+  .nav > ul > li > ul {
+    display: block;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.6s;
+  }
+
+/* end of nav */
+
+#slider {
     background-color: rgb(160, 160, 160);
     height: 300px;
     width: 1200px;
     margin-right: auto;
     margin-left: auto;
+}
+
+/* //////////////////////////////////////////////////////////////////////// */
+/* fading slider*/
+
+/* .sliderWrap {
+    position: relative;
+}
+
+.sliderWrap > div {
+    display: none;
+}
+
+.sliderWrap > div:first-child{
+    display: block;
+}
+
+.sliderWrap .slider{
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.sliderWrap .slider img {
+    vertical-align: top;
+}
+
+.sliderWrap .slider span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0,0,0,0.4);
+    padding: 10px 20px;
+    color: #fff;
+}
+
+.sliderWrap > div {
+    display: block;
+} */
+
+/* ///////////////////////////////////////////////////////////////////////////*/
+
+/*//////////////////////////////////////////////////////////////////////////////*/
+/* sliding slider */
+
+#slider {
+    overflow: hidden;
+}
+
+.sliderWrap {
+    display: flex;
+}
+
+.sliderWrap .slider {
+    position: relative;
+}
+
+.sliderWrap .slider img {
+    vertical-align: top;
+}
+
+.sliderWrap .slider span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    padding: 10px 20px;
 }
 
 .c {
